--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-/* html,
-body {
-    height: 100%;
-    width: 100%;
-} */
-
 body {
     background: url('imagens/background.png');
 }
+
+
+/* body {
+    height: 100%;
+    width: 100%;
+} */
 
 
 /* div img {
